# datsimx

./: pyproject.toml
datsimx/: eiger_mask.hdf5  from_vukica.lam  make_nexus.py  mlat_combine.py  mx_simulate.py  mx_simulate_jitt.py  wave_combine.py
datsimx/fcalcs/: db_anom_inputs.py  fcalc.py  pf-rd-ox_fftkk.out  pf-rd-red_fftkk.out
datsimx/ml_sep/: INTERN_GUIDE.md  arch.py  dset_loader.py  notes_found.txt  train.py
